# pegcel

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  bless.nu  rustfmt.toml
examples/: item.expanded.rs  item.rs  punct.expanded.rs  punct.rs  unit_struct.expanded.rs  unit_struct.rs
pegcel/macros/: Cargo.toml
pegcel/macros/src/: grammar.rs  lib.rs  manual_grammar.rs
pegcel/macros/tests/: meta.rs
src/: lib.rs
tests/: examples.rs
