[package]
name = "pegcel"
version = "0.2.0"
edition = "2021"

autoexamples = false

[features]
default = ["clone-impls", "printing"]

clone-impls = ["syn/clone-impls"]
extra-traits = ["syn/extra-traits"]
printing = ["syn/printing", "dep:quote"]

[[example]]
name = "item"

[[example]]
name = "punct"

[[example]]
name = "unit_struct"

[dependencies]
paste = { version = "1.0.12", default-features = false }
proc-macro2 = { version = "1.0.60", default-features = false }
quote = { version = "1.0.28", default-features = false, optional = true }
syn = { version = "2.0.18", default-features = false, features = ["parsing"] }

[dev-dependencies]
macrotest = "1.0.9"
syn = { version = "2.0.18", features = ["full"] }
